[package]
name = "candela"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
edition = "2018"
description = "A library outlining a communication protocol for remote LED control"
license = "MIT"

[dependencies]
prost = "0.7"
bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
zmq = { version = "0.9.2", features = ["vendored"] }

[build-dependencies]
prost-build = { version = "0.7" }