[package]
name = "candela"
version = "0.2.1"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
edition = "2018"
description = "A library outlining a communication protocol for remote LED control"
license = "MIT"

[dependencies]
async-trait = "0.1.42"
bytes = { version = "1.0", features = ["serde"] }
prost = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }

mio = { version = "^0.7", features = ["net"], optional = true }
zmq = { version = "0.9.2", features = ["vendored"], optional = true }

[build-dependencies]
prost-build = { version = "0.7" }

[features]
default = []
zmq-client = ["zmq", "mio"]
zmq-server = ["zmq", "mio"]