[package]
name = "candela"
version = "0.2.1"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
edition = "2021"
description = "A library outlining a communication protocol for remote LED control"
license = "MIT"

[dependencies]
async-trait = "0.1.52"
bytes = { version = "1.1.0", features = ["serde"] }
prost = "0.9.0"
serde = { version = "1.0.132", features = ["derive"] }

mio = { version = "0.8.0", features = ["net"], optional = true }
zmq = { version = "0.9.2", features = ["vendored"], optional = true }

[build-dependencies]
prost-build = "0.9.0"

[features]
default = []
zmq-client = ["zmq", "mio"]
zmq-server = ["zmq", "mio"]
